# spectacle-ocr-screenshot

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  SimpleQt6Gui  main.cpp  simple.pro
.github/workflows/: release.yml
